@@ -9,31 +9,30 @@ import org.javatuples.Pair;
 
 import dos.EXL.Types.MyError;
 import dos.EXL.Types.Errors.ErrorFactory;
+import dos.Util.DescriptionMaker;
 import dos.Util.Maybe;
 import dos.Util.Result;
 import dos.Util.Results;
 
 public class SelfData {
 
-    private List<String> fieldNames; 
-    private List<String> fieldTypes;
+    private List<Variable> fields; 
     private List<Pair<String, FunctionData>> functions; 
 
     public SelfData(){
-        fieldNames = new ArrayList<>();
-        fieldTypes = new ArrayList<>();
+        fields = new ArrayList<>();
         functions = new ArrayList<>();
     }
 
-    public Result<Pair<String,String>> getField(String name){
-        var fieldInt = IntStream.range(0, fieldNames.size())
-        .filter(i -> name.equals(fieldNames.get(i)))
+    public Result<Variable> getField(String name){
+        var fieldInt = IntStream.range(0, fields.size())
+        .filter(i -> name.equals(fields.get(i).getName()))
         .findFirst();
         if(fieldInt.isEmpty()){
             return Results.makeError(ErrorFactory.makeLogic("Can not find variable " + name, 7));
         }
         int f = fieldInt.getAsInt();
-        return Results.makeResult(new Pair<>(fieldNames.get(f), fieldTypes.get(f)));
+        return Results.makeResult(fields.get(f));
     }
 
     public List<Pair<String, FunctionData>> getFunctions() {
@@ -41,18 +40,14 @@ public class SelfData {
     }
 
     public List<String> getDescFromName(String funcName){
-        return functions.stream().filter(x -> x.getValue0().equals(funcName)).map( x -> x.getValue1().getDesc()).collect(Collectors.toList());
+        return functions.stream()
+                        .filter(x -> x.getValue0().equals(funcName))
+                        .map( x -> x.getValue1().getDesc())
+                        .toList();
     }
 
     public Maybe<MyError> addField(String name,String type){
-        List<String> fields = this.fieldNames.stream().filter(x -> x.equals(name)).toList();
-        if(fields.size() > 0)
-            return new Maybe<>(ErrorFactory.makeLogic("Duplicate variable name used " + name, 22));
-        if(!basicType(type)){
-
-        }
-        this.fieldNames.add(name);
-        this.fieldTypes.add(type);
+        fields.add(new Variable(name, type, -1, -1, -1));
         return new Maybe<>();
     }
 
@@ -67,43 +62,41 @@ public class SelfData {
         return new Maybe<>();
     }
 
-    
-    private boolean basicType(String type) {
-        switch(type){
-            case "String":
-            case "long":
-            case "double":
-            case "short":
-            case "int":
-            case "float":
-            case "char":
-            case "boolean":
-                return true;
-            default:
-                return false;
-        }
-    }
-
-
-    public List<String> getFieldNames() {
-        return fieldNames;
-    }
-
-
     public List<FunctionData> getFuncData(String name) {
         return functions.stream().filter(x -> x.getValue0().equals(name)).map( x -> x.getValue1()).toList();
     }
 
-    public Result<String> getFieldTy(String name, String fieldName) {
-        return null;
+    public Result<String> getFieldTy(String name) {
+       var field = fields.stream()
+                            .filter(fie -> fie.getName().equals(name))
+                            .findFirst();
+        if(field.isEmpty())
+            return Results.makeError(ErrorFactory.makeLogic("Field " + name + " was not found", 0));
+        return Results.makeResult(field.get().getType());
     }
 
     public boolean isFuncStatic(String name, String desc) {
         return false;
     }
 
-    public Result<String> getFuncType(String name, String partialDescription) {
-        return null;
+    public Result<String> getFuncType(String name, String partialDescription, ImportsData imports) {
+        List<FunctionData> datas = functions.stream()
+                                    .filter(func -> func.getValue0().equals(name))
+                                    .map(func -> func.getValue1()).toList();
+        var function = datas.stream()
+                    .filter(
+                        data -> data.getDesc()
+                            .substring(
+                                0,
+                                data.getDesc().lastIndexOf(")") + 1
+                            ).equals(partialDescription)
+                        )
+                    .findFirst();
+        if(function.isEmpty())
+            return Results.makeError(ErrorFactory.makeLogic("No function called " + name + " with the description " + partialDescription + " was found " , 20));
+        var desc = function.get().getDesc();
+        var type = DescriptionMaker.fromASM(desc.substring(desc.lastIndexOf(")") + 1),imports );
+        return type;
     }
   
     
